[package]
name = "gree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
aes = "0.8.2"
base64 = "0.21.2"
log = "0.4"
tokio = { version = "1", optional = true, features = ["net","time"] }

[dev-dependencies]
env_logger = "0.10.0"

[features]
async_tokio = ["tokio"]
