[package]
name = "gree"
version = "0.1.0"
edition = "2021"
description = "Controlling Gree Smart air conditioning units via Rust"
repository = "https://github.com/vvvy/gree-rs"
license-file = "LICENSE"
readme = "README.md"
keywords = ["hvac", "gree", "ewpe"]

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
aes = "0.8.2"
base64 = "0.21.2"
log = "0.4"
tokio = { version = "1", optional = true, features = ["net","time", "macros"] }

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1", features = ["net","time", "macros", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false }
tiny_http = "0.12.0"

[features]

[[example]]
name = "async_tool"
required-features = ["tokio"]